@@ -6,6 +6,3 @@ balsa_ui_FILES =                   \
 		 ab-main.ui
 
 EXTRA_DIST = $(balsa_ui_FILES)
-
-balsa_uidir = $(BALSA_DATA_PREFIX)/ui
-balsa_ui_DATA = $(balsa_ui_FILES)
