@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<gresources>
+  <gresource prefix="/org/desktop/Balsa">
+    <file compressed="true">ab-main.ui</file>
+  </gresource>
+</gresources>
