@@ -1,12 +1,0 @@
-# ui/meson.build
-
-balsa_ui_files = [
-  'source-viewer.ui',
-  'main-window.ui',
-  'message-window.ui',
-  'sendmsg-window.ui',
-  'ab-main.ui'
-  ]
-
-balsa_ui_dir = join_paths(get_option('datadir'), 'balsa', 'ui')
-install_data(balsa_ui_files, install_dir : balsa_ui_dir)
